--- a/content/docs/tihc-en/serverless.mdx
+++ b/content/docs/tihc-en/serverless.mdx
@@ -1,6 +1,6 @@
 ---
 title: Serverless API
-description: tihc-serverless 的 API、engines、环境变量
+description: "`tihc-serverless` API, engines, and environment variables"
 ---
 
 ## Endpoint
@@ -15,15 +15,15 @@ Request JSON:
 
 Response:
 
-- streaming text（`text/plain; charset=utf-8`）
+- streaming text (`text/plain; charset=utf-8`)
 
 ## Engines
 
 - `openai`
-- `openai_rag`（GraphRAG → OpenAI）
-- `manus`（proxy）
-- `tidb`（proxy）
+- `openai_rag` (GraphRAG → OpenAI)
+- `manus` (proxy)
+- `tidb` (proxy)
 
 ## Env Vars
 
-见 `tihc-serverless/.env.example`
+See `tihc-serverless/.env.example`
