--- a/content/docs/tihc-en/evaluation.mdx
+++ b/content/docs/tihc-en/evaluation.mdx
@@ -1,40 +1,39 @@
 ---
 title: Evaluation
-description: 问题空间收敛评估（gold + traces）
+description: Intake convergence evaluation (gold + traces)
 ---
 
 ## What we measure
 
-“问题空间收敛”聚焦入口阶段的结构化输出：
+“Intake convergence” focuses on the structured output produced at the intake stage:
 
 - `taskType`
-- `handleability`（HANDLE_NOW / NEED_MORE_INFO / OUT_OF_SCOPE）
-- `missingMep`（缺失槽位）
-- `selfConfidence`（自评置信度）
+- `handleability` (HANDLE_NOW / NEED_MORE_INFO / OUT_OF_SCOPE)
+- `missingMep` (missing required fields)
+- `selfConfidence` (self-rated confidence)
 
 ## Gold eval (supervised)
 
-在 `evalite-demo/`：
+In `evalite-demo/`:
 
 - `npm run eval:intake`（trace/ollama provider）
 - `npm run eval:intake:smoke`（example traces）
 
 ## User traces (no labels)
 
-在 `evalite-demo/`：
+In `evalite-demo/`:
 
 - `npm run eval:intake:traces`
 
-输出：
+Output:
 
 - `reports/intake-traces-report.md`
 - `reports/intake-traces-report.json`
 
 ## Trace collection
 
-在 `tihc` sidepanel：
+In the `tihc` sidepanel:
 
-- 设置 `Eval ID`
-- 点击 `Copy Trace`
-- 追加到 `evalite-demo/data/intake_traces.jsonl`（本地文件，不上传）
-
+- Set `Eval ID`
+- Click `Copy Trace`
+- Append to `evalite-demo/data/intake_traces.jsonl` (local file, not uploaded)
