--- a/content/docs/tihc-en/oauth.mdx
+++ b/content/docs/tihc-en/oauth.mdx
@@ -1,30 +1,29 @@
 ---
 title: Google OAuth (Workspace)
-description: 扩展登录与后端域名限制
+description: Extension login and serverless domain enforcement
 ---
 
 ## Extension login
 
-`tihc` 使用 `chrome.identity.launchWebAuthFlow`。
+`tihc` uses `chrome.identity.launchWebAuthFlow`.
 
-sidepanel 顶部会显示：
+The sidepanel shows:
 
 - `Redirect: https://<EXTENSION_ID>.chromiumapp.org/oauth2`
 
-把它加入 Google Cloud Console 的 OAuth Client “Authorized redirect URIs”。
+Add it to your Google Cloud Console OAuth Client “Authorized redirect URIs”.
 
 ## Serverless enforcement
 
-`tihc-serverless` 环境变量：
+`tihc-serverless` env vars:
 
 - `GOOGLE_CLIENT_ID`
-- `GOOGLE_WORKSPACE_DOMAIN`（例如 `pingcap.com`）
-- `REQUIRE_AUTH=true`（可选）
+- `GOOGLE_WORKSPACE_DOMAIN` (e.g. `pingcap.com`)
+- `REQUIRE_AUTH=true` (optional)
 
-校验流程：
+Validation flow:
 
-- 每次请求携带 `Authorization: Bearer <token>`
-- serverless 调用 Google `tokeninfo` 校验有效性
-- 校验 `aud` 与 `GOOGLE_CLIENT_ID` 匹配（若设置）
-- 校验 `hd` 或 `email@domain` 与 `GOOGLE_WORKSPACE_DOMAIN` 匹配
-
+- Each request sends `Authorization: Bearer <token>`
+- Serverless calls Google `tokeninfo` to validate the token
+- Validate `aud` matches `GOOGLE_CLIENT_ID` (if configured)
+- Validate `hd` or `email@domain` matches `GOOGLE_WORKSPACE_DOMAIN`
