--- a/content/posts/zh/01postsale-customer-success.mdx
+++ b/content/posts/zh/01postsale-customer-success.mdx
@@ -110,7 +110,7 @@ flowchart TD
    end
    S1 --> S2
    S2 --> S3
-   S3 --> 时间[时间]
+   S3 --> Time[时间]
 ```
 
 每一层和每个词，简单说就是：
@@ -184,7 +184,6 @@ $$
 ## 四、参考与延伸阅读
 
 1. [客户成功经济](https://book.douban.com/subject/36021637/)
-
 
 
 
